Resolved an issue where the greyscale on canvas images, on mobile and in landscape, would only transition away from greyscale to color when the site is loaded in landscape. Loading the page in portrait and then going to landscape would make the image not transition.

--- a/css/main.css
+++ b/css/main.css
@@ -501,6 +501,7 @@ width: 100%;
     transition-property: transform;
     transition-duration: 0.2s;
     transition-timing-function: var(--bouncy-trans);
+    box-shadow: var(--box-shadow-low);
 }
 
 
